Bug 156293 - Assertion failure in MessageProperty::forget
Summary: Assertion failure in MessageProperty::forget
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.9.50
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-21 03:33 UTC by Oliver Putz
Modified: 2008-02-10 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-01-21 03:33:28 UTC
Version:           1.9.50 (using 4.00.80 (KDE 4.0.80 >= 20080104), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.22-gentoo-r9

I just tried to move a message via drag and drop from an IMAP folder to a local folder. After having successfully copied(!) the first (already read) message, KMail crashed as soon as I clicked on the second (unread) message (in order to drag and drop it)
Remark: This crash just also occurred after clicking on a (read) mail directly after starting Kontact.

The backtrace for this (regrettably not reproducible) crash was:

Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb537b6d0 (LWP 7073)]
[KCrash handler]
#6  0xffffe410 in __kernel_vsyscall ()
#7  0xb57231f1 in *__GI_raise (sig=6)
    at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#8  0xb57249b8 in *__GI_abort () at abort.c:88
#9  0xb7dda265 in qt_message_output (msgType=QtFatalMsg, 
    buf=0xbfaedfdc "ASSERT: \"!transferInProgress( serNum )\" in file /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/messageproperty.cpp, line 164") at global/qglobal.cpp:2160
#10 0xb7dda32a in qFatal (msg=0xb7ee187c "ASSERT: \"%s\" in file %s, line %d")
    at global/qglobal.cpp:2392
#11 0xb7dda555 in qt_assert (
    assertion=0xb374b3a1 "!transferInProgress( serNum )", 
    file=0xb374b34c "/var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/messageproperty.cpp", line=164) at global/qglobal.cpp:1917
#12 0xb34e8891 in KMail::MessageProperty::forget (msgBase=0x855a248)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/messageproperty.cpp:164
#13 0xb3532d0d in ~KMMsgBase (this=0x855a248)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmmsgbase.cpp:87
#14 0xb33f9a25 in ~KMMessage (this=0x855a248)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmmessage.cpp:216
#15 0xb36d93c6 in KMTextSource::text (this=0x84efc98, serialNumber=43)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/textsource.cpp:61
#16 0xb61a56b8 in KPIM::MailList::populateMimeData (this=0xbfaf02d0, 
    md=0x85bcee0, src=0x84efc98)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/libkdepim/maillistdrag.cpp:188
#17 0xb3479a00 in KMHeaders::contentsMouseMoveEvent (this=0x82f34a8, 
    e=0xbfaf0338)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmheaders.cpp:2427
#18 0xb6540e1e in Q3ScrollView::viewportMouseMoveEvent (this=0x82f34a8, 
    e=0xbfaf0a24) at widgets/q3scrollview.cpp:1814
#19 0xb654225a in Q3ScrollView::eventFilter (this=0x82f34a8, obj=0x82e9b00, 
    e=0xbfaf0a24) at widgets/q3scrollview.cpp:1512
#20 0xb64df416 in Q3ListView::eventFilter (this=0x82f34a8, o=0x82e9b00, 
    e=0xbfaf0a24) at itemviews/q3listview.cpp:3790
#21 0xb3485486 in KMHeaders::eventFilter (this=0x82f34a8, o=0x82e9b00, 
    e=0xbfaf0a24)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmheaders.cpp:288
#22 0xb6d80d9b in QApplicationPrivate::notify_helper (this=0x8060068, 
    receiver=0x82e9b00, e=0xbfaf0a24) at kernel/qapplication.cpp:3548
#23 0xb6d82a2c in QApplication::notify (this=0xbfaf0fb0, receiver=0x82e9b00, 
    e=0xbfaf0a24) at kernel/qapplication.cpp:3255
#24 0xb7a32fb3 in KApplication::notify (this=0xbfaf0fb0, receiver=0x82e9b00, 
    event=0xbfaf0a24)
    at /var/tmp/portage/kde-base/kdelibs-9999.4/work/kdelibs-9999.4/kdeui/kernel/kapplication.cpp:314
#25 0xb7eacd7b in QCoreApplication::notifyInternal (this=0xbfaf0fb0, 
    receiver=0x82e9b00, event=0xbfaf0a24) at kernel/qcoreapplication.cpp:530
#26 0xb6de6628 in QETWidget::translateMouseEvent (this=0x82e9b00, 
    event=0xbfaf0de8)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:203
#27 0xb6de4e8e in QApplication::x11ProcessEvent (this=0xbfaf0fb0, 
    event=0xbfaf0de8) at kernel/qapplication_x11.cpp:2913
#28 0xb6e0ac45 in QEventDispatcherX11::processEvents (this=0x805f170, 
    flags=@0xbfaf0ed4) at kernel/qeventdispatcher_x11.cpp:125
#29 0xb7eac191 in QEventLoop::processEvents (this=0xbfaf0f40, 
    flags=@0xbfaf0f08) at kernel/qeventloop.cpp:140
#30 0xb7eac29a in QEventLoop::exec (this=0xbfaf0f40, flags=@0xbfaf0f48)
    at kernel/qeventloop.cpp:186
#31 0xb7eae626 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:759
#32 0xb6d80487 in QApplication::exec () at kernel/qapplication.cpp:3053
#33 0x0804b3e5 in main (argc=1, argv=0xbfaf1144)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kontact/src/main.cpp:162
#34 0xb570ffdc in __libc_start_main (main=0x804ab50 <main>, argc=1, 
    ubp_av=0xbfaf1144, init=0x804c170 <__libc_csu_init>, 
    fini=0x804c160 <__libc_csu_fini>, rtld_fini=0xb7f70100 <_dl_fini>, 
    stack_end=0xbfaf113c) at libc-start.c:229
#35 0x0804a781 in _start ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Thomas McGuire 2008-01-21 16:18:42 UTC
Seems that this is not limited to IMAP.
Comment 2 Thomas McGuire 2008-02-04 18:15:11 UTC
*** Bug 156991 has been marked as a duplicate of this bug. ***
Comment 3 Thomas McGuire 2008-02-10 19:04:28 UTC
SVN commit 773273 by tmcguire:

Don't crash when trying to drag messages which are not complete.
Based on patch by Mischael Schill <me at mschill dot ch>

BUG: 156293



 M  +3 -0      folderstorage.h  
 M  +7 -4      textsource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=773273