Don't crash when trying to drag messages which are not complete. Based on patch by Mischael Schill <me at mschill dot ch>

BUG: 156293


svn path=/trunk/KDE/kdepim/; revision=773273